first integraton between scraper and db

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,26 @@
+alembic==0.9.7
 beautifulsoup4==4.6.0
+certifi==2018.1.18
 chardet==3.0.4
 cssselect==1.0.1
+fake-useragent==0.1.10
 html2text==2017.10.4
+idna==2.6
 ImageHash==4.0
 lxml==3.8.0
+Mako==1.0.7
+MarkupSafe==1.0
 numpy==1.14.0
 Pillow==5.0.0
+pkg-resources==0.0.0
 PySocks==1.6.7
+python-dateutil==2.6.1
+python-editor==1.0.3
 PyWavelets==0.5.2
+requests==2.18.4
 scipy==1.0.0
 selenium==3.8.1
 SerpScrap==0.10.1
 six==1.11.0
 SQLAlchemy==1.2.2
-alembic==0.9.7
+urllib3==1.22
