--- a/alembic.ini
+++ b/alembic.ini
@@ -7,6 +7,9 @@ db_name = protest_images.db
 # path to migration scripts
 script_location = protestDB/migrations
 
+# image location:
+image_dir = images
+
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
 
