--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,34 @@
+aiohttp==2.3.10
 alembic==0.9.7
+async-timeout==2.0.0
+asyncio==3.4.3
 beautifulsoup4==4.6.0
 certifi==2018.1.18
 chardet==3.0.4
+choix==0.3.1
 cssselect==1.0.1
+decorator==4.2.1
 fake-useragent==0.1.10
 html2text==2017.10.4
 idna==2.6
+idna-ssl==1.0.0
 ImageHash==4.0
+ipython==6.2.1
+ipython-genutils==0.2.0
+jedi==0.11.1
 lxml==3.8.0
 Mako==1.0.7
 MarkupSafe==1.0
+multidict==4.1.0
 numpy==1.14.0
+parso==0.1.1
+pexpect==4.4.0
+pickleshare==0.7.4
 Pillow==5.0.0
 pkg-resources==0.0.0
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
+Pygments==2.2.0
 PySocks==1.6.7
 python-dateutil==2.6.1
 python-editor==1.0.3
@@ -21,7 +37,10 @@ requests==2.18.4
 scipy==1.0.0
 selenium==3.8.1
 SerpScrap==0.10.1
+simplegeneric==0.8.1
 six==1.11.0
 SQLAlchemy==1.2.2
+traitlets==4.3.2
 urllib3==1.22
-psutil==5.4.3
+wcwidth==0.1.7
+yarl==1.1.1
