--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ choix==0.3.1
 cssselect==1.0.1
 decorator==4.2.1
 fake-useragent==0.1.10
+greenlet==0.4.13
 html2text==2017.10.4
 idna==2.6
 idna-ssl==1.0.0
@@ -19,7 +20,9 @@ jedi==0.11.1
 lxml==3.8.0
 Mako==1.0.7
 MarkupSafe==1.0
+msgpack==0.5.4
 multidict==4.1.0
+neovim==0.2.1
 numpy==1.14.0
 parso==0.1.1
 pexpect==4.4.0
@@ -27,6 +30,7 @@ pickleshare==0.7.4
 Pillow==5.0.0
 pkg-resources==0.0.0
 prompt-toolkit==1.0.15
+psutil==5.4.3
 ptyprocess==0.5.2
 Pygments==2.2.0
 PySocks==1.6.7
@@ -34,11 +38,13 @@ python-dateutil==2.6.1
 python-editor==1.0.3
 PyWavelets==0.5.2
 requests==2.18.4
+scikit-learn==0.19.1
 scipy==1.0.0
 selenium==3.8.1
 SerpScrap==0.10.1
 simplegeneric==0.8.1
 six==1.11.0
+sklearn==0.0
 SQLAlchemy==1.2.2
 traitlets==4.3.2
 urllib3==1.22
